correction internationalisation et fin série 9

--- a/src/java/ch/hearc/ig/odi/customeraccount/config/Message.properties
+++ b/src/java/ch/hearc/ig/odi/customeraccount/config/Message.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-titre_accueil=Bienvenue sur ma page
+titre_accueil=message de bienvenue
 titre_cli_list=Liste des clients
-titre_cli_edi=D\u00e9tails du client
+titre_cli_edi=Details d'un client
 
 
